test/good/functions/var1.px

func sqr(Int x) Int def
    return x*x

f = sqr
print f(-9)
