test/bad/functions/type11.px

func f(Int x) Int def
    return x

g = f
print g(x=9)
